--- a/scss/details.scss
+++ b/scss/details.scss
@@ -189,3 +189,44 @@
     }
     
 }
+
+.tan{
+    display: none;
+    border-radius: 5px;
+    width: 400px;
+    height: 200px;
+    background: #ffffff;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    margin-left: -100px;
+    margin-top: -200px;
+    border: 1px solid #ccc;
+    p{
+        padding-top: 20px;
+        font-size: 25px;
+        text-align: center;
+    }
+    div{
+        margin-top: 50px;
+        display: flex;
+        justify-content: space-around;
+        span{
+            display: inline-block;
+            width: 140px;
+            height: 40px;
+            line-height: 40px;
+            text-align: center;
+            // color: #ffffff;
+            font-size: 16px;
+            border: 1px solid #ccc;
+            border-radius: 7px;
+            background: #f0f0f0;
+            &:hover{
+                background: #d80c18;
+                color: #ffffff;
+                cursor: pointer;
+            }
+        }
+    }
+}
