完善详情页图片切换

--- a/scss/details.scss
+++ b/scss/details.scss
@@ -53,6 +53,9 @@
                 // border: 1px solid red;
                 overflow: hidden;
                 li{
+                    &:nth-child(1){
+                        border: 1px solid #F01E00;
+                    }
                     width: 70px;
                     height: 70px;
                     float: left;
