--- a/scss/details.scss
+++ b/scss/details.scss
@@ -189,6 +189,8 @@
             width: 1196px;
             left: 500px;
             display: inline-block;
+            height: 600px;
+            background: #ccc;
         }
     }
     
